<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="Please enter a number(1~10)"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView" android:layout_marginTop="24dp" app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/ed_number" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
    />
    <Button
            android:text="@android:string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bt_ok" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_number" app:layout_constraintHorizontal_bias="0.498"
            android:onClick="check"/>
</androidx.constraintlayout.widget.ConstraintLayout>